--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
     nav a:hover {
       color: var(--accent);
     }
+@media (max-width: 768px) {
+  nav {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+}
 
 
     /* HERO */
@@ -235,6 +244,71 @@
   display: none;
 }
 
+/* ============================================
+   MENÚ HAMBURGUESA (estilo Barabási Lab)
+============================================ */
+
+.hamburger {
+  display: none;
+  width: 32px;
+  height: 26px;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.hamburger div {
+  width: 100%;
+  height: 4px;
+  background: #e6e6e6;
+  border-radius: 3px;
+  transition: 0.3s ease;
+}
+
+/* Menú móvil oculto al inicio */
+.mobile-menu {
+  display: none;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh;
+  width: 70%;
+  background: #1e1e1e;
+  padding-top: 80px;
+  padding-left: 30px;
+  z-index: 900;
+  box-shadow: -3px 0 20px rgba(0, 0, 0, 0.6);
+}
+
+.mobile-menu a {
+  color: #fff;
+  font-size: 1.8rem;
+  margin-bottom: 25px;
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+.mobile-menu a:hover {
+  color: #ffcc00;
+}
+
+/* Animación para abrir */
+.mobile-menu.show {
+  display: flex;
+}
+
+/* Transformar la hamburguesa al abrir */
+.hamburger.open div:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 6px);
+}
+.hamburger.open div:nth-child(2) {
+  opacity: 0;
+}
+.hamburger.open div:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -6px);
+}
+
   </style>
 </head>
 
@@ -252,6 +326,23 @@
     <a href="#Investigadores">Investigadores</a>
     <a href="#Contacto">Contacto</a>
   </nav>
+
+  <!-- Botón hamburguesa -->
+<div class="hamburger" onclick="toggleMenu()">
+  <div></div>
+  <div></div>
+  <div></div>
+</div>
+
+<!-- Menú móvil -->
+<div id="mobileMenu" class="mobile-menu">
+  <a href="#inicio">Inicio</a>
+  <a href="#proyectos">Proyectos</a>
+  <a href="#colaboraciones">Colaboraciones</a>
+  <a href="#equipo">Equipo</a>
+  <a href="#contacto">Contacto</a>
+</div>
+
 </header>
 
 <!-- HERO -->
@@ -426,7 +517,7 @@
 <div class="container-fluid section-dark text-center">
 
   <!-- Director -->
-  <div class="mb-5">
+  <div class="mb-5 text-center card-dark">
     <h1 class="fw-light mb-2" style="font-size: 4rem;">Director</h1>
     <img src="imagenes/Gabriel.jpg" class="rounded-circle mb-3" width="200" height="200">
     <h3 class="fw-light fs-2 mb-1">Gabriel D. Puccini</h3>
@@ -542,6 +633,15 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+function toggleMenu() {
+  const menu = document.getElementById("mobileMenu");
+  const burger = document.querySelector(".hamburger");
+
+  menu.classList.toggle("show");
+  burger.classList.toggle("open");
+}
+</script>
 
 
 </body>
