--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@
 
 <!-- HERO -->
 <div class="hero" id="Inicio">
-  <img src="imagenes/iconos.png" alt="Logo Lab">
-
+<!--  <img src="imagenes/iconos.png" alt="Logo Lab"> -->
+<img src="imagenes/iconos.png" class="img-fluid" style="max-width: 1060px;" alt="Logo Lab">
   <h1b>Laboratorio de Métodos y Simulaciones Computacionales</h1b>
    <p>Universidad Tecnológica Nacional – Facultad Regional Rafaela</p>
 </div>
