--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
   <div class="grid-2">
    <!-- <img src="imagenes/facultad.jpeg" class="img-fluid" alt="Facultad"> -->
    <!-- <img src="imagenes/lab1b.png" class="img-fluid" alt="Facultad">-->
-    <img src="imagenes/lab2.png" class="img-fluid" alt="Facultad">
+    <img src="imagenes/lab2.png" class="img-fluid rounded" alt="Facultad">
     <div>
       <p>Desde su fundación en 2016, el Laboratorio de Métodos y Simulaciones Computacionales se ha consolidado como un espacio innovador donde convergen investigadores de diversas disciplinas científicas y técnicas.</p>
       <p>Nos dedicamos al desarrollo de soluciones creativas para desafíos ingenieriles mediante herramientas avanzadas de matemáticas, física y computación.</p>
