--- a/index.html
+++ b/index.html
@@ -781,13 +781,13 @@
     <div class="investigador-card">
       <img src="imagenes/Carlos.jpeg" alt="Carlos Bonetti">
       <h3>Carlos Bonetti</h3>
-      <p>Doctor en Ingeniería Industrial</p>
+      <p>Doctor en Ingeniería - Ingeniero Industrial</p>
     </div>
 
     <div class="investigador-card">
       <img src="imagenes/Jeza.jpeg" alt="Jezabel Bianchotti">
       <h3>Jezabel Bianchotti</h3>
-      <p>Doctora en Ingeniería Civil</p>
+      <p>Doctora en Ingeniería - Ingeniera Civil</p>
     </div>
 
     <div class="investigador-card">
