--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
       }
 
       .card img {
-        max-height: 240px; /* Ajustado para móvil */
+        max-height: 260px; /* Ajustado para móvil */
       }
 
       .card h3 {
@@ -793,7 +793,7 @@
     <div class="investigador-card">
       <img src="imagenes/Meli.jpg" alt="Melina Denardi">
       <h3>Melina Denardi</h3>
-      <p>Becaria doctoral</p>
+      <p>Becaria doctoral - Ingeniera Civil</p>
     </div>
 
     <div class="investigador-card">
