--- a/proyecto-aprendizaje.html
+++ b/proyecto-aprendizaje.html
@@ -57,9 +57,9 @@
 
  <p>El control de los materiales granulares es sumamente importante en la industria de productos agrícolas, alimenticios y farmacéuticos. Habitualmente se utilizan tolvas para almacenar y dosificar el material. Pero para tener un control confiable de los flujos, estos equipos deben ser diseñados teniendo en cuenta que los sistemas granulares tienen un comportamiento dinámico que aún está lejos de ser comprendido debido a las complejas interacciones de las partículas entre sí y con el medio que las rodea. </p>
   
-    </p> En los últimos años se ha intensificado el uso de herramientas computacionales basadas en aprendizaje automático (Machine Learning) para simular y predecir el comportamiento dinámico de distintos sistemas físicos. Las redes neuronales convolucionales (CNN) permiten extraer características de imágenes y videos, reduciendo la dimensionalidad de los datos y conservando solo la información relevante. </p>
+    <p> En los últimos años se ha intensificado el uso de herramientas computacionales basadas en aprendizaje automático (Machine Learning) para simular y predecir el comportamiento dinámico de distintos sistemas físicos. Las redes neuronales convolucionales (CNN) permiten extraer características de imágenes y videos, reduciendo la dimensionalidad de los datos y conservando solo la información relevante. </p>
 
-    </p>  En este proyecto se buscará aprovechar esta funcionalidad de las CNN para extraer las propiedades de los flujos de material particulado. Para ello se propone implementar redes neuronales que puedan ser entrenadas a partir de filmaciones de los flujos de partículas reales y simulados por DEM (método de elementos discretos) producidos durante el proceso de descarga de una tolva bidimensional.</p>
+    <p>  En este proyecto se buscará aprovechar esta funcionalidad de las CNN para extraer las propiedades de los flujos de material particulado. Para ello se propone implementar redes neuronales que puedan ser entrenadas a partir de filmaciones de los flujos de partículas reales y simulados por DEM (método de elementos discretos) producidos durante el proceso de descarga de una tolva bidimensional.</p>
 
 
         <hr>
