--- a/proyecto-recorridos.html
+++ b/proyecto-recorridos.html
@@ -54,13 +54,13 @@
         <a href="index.html#Proyectos" class="volver">← Volver a proyectos</a>
         <!--<a href="index.html?goto=proyectos" class="volver">← Volver a proyectos</a>-->
         <h1>Diseño de recorridos óptimos para transporte de leche</h1>
- <p>El sector lácteo argentino cuenta con un gran potencial de crecimiento, impulsado por la demanda internacional de productos de alta calidad. Sin embargo, las limitaciones de infraestructura —en especial la falta de caminos adecuados y servicios asociados— dificultan mantener la calidad de la leche cruda durante su transporte. Según datos de la Secretaría de Gobierno de Agroindustria de la Nación, alrededor del 42% del traslado de leche se realiza por caminos de tierra, lo que genera vulnerabilidad ante lluvias, inundaciones y otras condiciones adversas.
+ <p>El sector lácteo argentino cuenta con un gran potencial de crecimiento, impulsado por la demanda internacional de productos de alta calidad. Sin embargo, las limitaciones de infraestructura —en especial la falta de caminos adecuados y servicios asociados— dificultan mantener la calidad de la leche cruda durante su transporte. Según datos de la Secretaría de Gobierno de Agroindustria de la Nación, alrededor del 42% del traslado de leche se realiza por caminos de tierra, lo que genera vulnerabilidad ante lluvias, inundaciones y otras condiciones adversas.</p>
 
-Esta situación introduce una elevada incertidumbre al planificar rutas y gestionar la flota de vehículos, con un impacto directo sobre los tiempos de recolección, los costos operativos y la calidad final del producto. Mejorar la eficiencia logística se vuelve entonces un elemento clave para fortalecer la competitividad del sector.
+<p>Esta situación introduce una elevada incertidumbre al planificar rutas y gestionar la flota de vehículos, con un impacto directo sobre los tiempos de recolección, los costos operativos y la calidad final del producto. Mejorar la eficiencia logística se vuelve entonces un elemento clave para fortalecer la competitividad del sector.</p>
 
-En este proyecto se aborda un problema real de optimización de recorridos para empresas lácteas de la provincia de Santa Fe. Para ello se desarrollan modelos y algoritmos basados en un enfoque metaheurístico híbrido que combina recocido simulado y búsqueda tabú. La metodología permite identificar rutas eficientes y robustas, incluso bajo condiciones desfavorables.
+<p>En este proyecto se aborda un problema real de optimización de recorridos para empresas lácteas de la provincia de Santa Fe. Para ello se desarrollan modelos y algoritmos basados en un enfoque metaheurístico híbrido que combina recocido simulado y búsqueda tabú. La metodología permite identificar rutas eficientes y robustas, incluso bajo condiciones desfavorables.</p>
 
-El objetivo final es el desarrollo de una herramienta computacional que asista a las empresas en la planificación diaria de sus recorridos y en la gestión de sus vehículos, ofreciendo soluciones de calidad en tiempos compatibles con la toma de decisiones operativas.</p>
+<p>El objetivo final es el desarrollo de una herramienta computacional que asista a las empresas en la planificación diaria de sus recorridos y en la gestión de sus vehículos, ofreciendo soluciones de calidad en tiempos compatibles con la toma de decisiones operativas.</p>
         <hr>
 
         <a href="index.html#Proyectos" class="volver">← Volver a proyectos</a>
