--- a/index.html
+++ b/index.html
@@ -538,7 +538,8 @@
       }
 
       .card img {
-        max-height: 260px; /* Ajustado para móvil */
+       /* max-height: 260px;  Ajustado para móvil */
+        object-fit: cover; 
       }
 
       .card h3 {
