--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
 
       .card img {
        /* max-height: 260px;  Ajustado para móvil */
-        object-fit: cover; 
+        object-fit: contain; 
       }
 
       .card h3 {
