--- a/index.html
+++ b/index.html
@@ -538,9 +538,8 @@
       }
 
       .card img {
-       /* max-height: 260px;  Ajustado para móvil */
-        object-fit: contain; 
-      }
+        max-height: 260px; /* Ajustado para móvil */
+       }
 
       .card h3 {
         font-size: 1.8rem;
